--- a/react-app/src/components/auth/signup.css
+++ b/react-app/src/components/auth/signup.css
@@ -12,3 +12,8 @@ button {
     color: white;
     border-radius: 5px;
 }
+
+h3 {
+    color: #212124;
+    font-family: Proxima Nova,Helvetica,sans-serif;
+}
