--- a/react-app/src/components/pictures/pictures.css
+++ b/react-app/src/components/pictures/pictures.css
@@ -15,3 +15,21 @@
 input {
     margin: 10px;
 }
+
+/* input[type="file"] {
+    display: none;
+} */
+
+/* .new-file-upload {
+    cursor: pointer;
+    background-color: #128fdc;
+    color: white;
+    border-radius: 5px;
+    margin: 5px;
+    border: black solid 2px;
+    padding: 2px;
+}
+
+.new-file-upload:hover {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3) 0 0);
+} */
