--- a/react-app/src/components/albums/albums.css
+++ b/react-app/src/components/albums/albums.css
@@ -1,4 +1,6 @@
 .album-container {
+    display: flex;
+    justify-content: space-around;
     border: 3px solid black;
     border-radius: 10px;
     margin: 10px;
