--- a/react-app/src/components/navBar.css
+++ b/react-app/src/components/navBar.css
@@ -1,6 +1,3 @@
-/* .container {
-    background-color: gray;
-} */
 
 .navbar-container {
     display: flex;
@@ -17,7 +14,12 @@
     border-bottom: #128fdc 4px solid;
 }
 
-footer {
+.footer {
     display: flex;
-    justify-content: end;
+    justify-content: space-around;
+    position: fixed;
+    background-color: whitesmoke;
+    bottom: 0;
+    border: black solid;
+    width: 90vw;
 }
