changed the font of the h1

--- a/react-app/src/components/Splashpage.css
+++ b/react-app/src/components/Splashpage.css
@@ -1,3 +1,7 @@
+h1 {
+    font-family: Proxima Nova,helvetica neue,helvetica,arial,sans-serif;
+}
+
 .pic-grid {
     background-color: whitesmoke;
 }
