--- a/react-app/src/components/pictures/pictures.css
+++ b/react-app/src/components/pictures/pictures.css
@@ -1,11 +1,11 @@
-.picturesContainer > div > ul {
+.picturesContainer > div > div {
     display: flex;
     flex-flow: row wrap;
     padding: 10px;
     gap: 20px;
 }
 
-.picturesContainer > div > ul > li > a > img {
+.picturesContainer > div > div > div > a > img {
     object-fit: cover;
     height: 430px;
     width: 280px;
