--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -27,3 +27,9 @@ textarea {
     border-top:  solid black 2px;
     padding: 10px;
 }
+
+.pictureContainer > div > img{
+    /* border: red solid 5px; */
+    max-width: 800px;
+    max-height: 1600px;
+}
