--- a/react-app/src/components/albums/albums.css
+++ b/react-app/src/components/albums/albums.css
@@ -1,8 +1,12 @@
 .album-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     border: 3px solid black;
     border-radius: 10px;
     margin: 10px;
     padding: 10px;
+}
+
+.album-container > span {
+    width: 200px;
 }
