created a border around the pic and buttons in album

--- a/react-app/src/components/albumsPics/albumsPics.css
+++ b/react-app/src/components/albumsPics/albumsPics.css
@@ -1,16 +1,20 @@
-.picturesContainer > div > ul > li > img {
-    width: 200px;
-    height: 100px;
+
+
+.picturesContainer > div {
+    width: 400px;
+    border: black dashed 2px;
+    padding: 5px;
+    margin: 5px;
 }
 
-.picturesContainer > div > ul > li > img {
+.picturesContainer > div > a > img {
     object-fit: cover;
     height: 430px;
     width: 280px;
     border: black solid 2px;
 }
 
-.picturesContainer > div > ul {
+.picturesContainer > div > a > img {
     display: flex;
     flex-flow: row wrap;
     padding: 10px;
