changed the edit title so that an input box appears after it is clicked on. Added text cursor

--- a/react-app/src/components/buttons/Logoutbutton.css
+++ b/react-app/src/components/buttons/Logoutbutton.css
@@ -1,7 +1,7 @@
 .profile-dropdown {
     position: absolute;
-    right: 10px;
-    top: 25px;
-    border: solid black;
-    border-radius: 10px;
+    right: 25px;
+    top: 30px;
+    /* border: solid black; */
+    /* border-radius: 10px; */
 }
