--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -56,6 +56,7 @@ textarea {
     font-size: 20px;
 }
 
-.not-input:hover {
-    cursor: text;
+.not-input {
+    background-color: white;
+    font-size: 20px;
 }
