--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
+    z-index: 1000;
   }
 
   #modal-background {
@@ -17,6 +18,7 @@
     left: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.7);
+    z-index: 999;
   }
 
   #modal-content {
@@ -25,4 +27,5 @@
     border: solid black;
     padding: 10px;
     border-radius: 5px;
+    z-index: 1001;
   }
